--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,15 @@ title: Peter Jalbert
 description: Peter's personal website.
 keywords: 
 baseurl:  / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: https://peterjalbert.github.io  # url should be 'http://<github_username>.github.io/homepage' as before
+url: http://peterjalbert.github.io  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
 # author -- index page "about me" section
-author:  # change following line to your infomation.
-  name: GitHub  # Be used at blog posts' author.
-  first_name: Hub  # Be used at index page about me section.
-  last_name: Git  # Be used at index page about me section.
+author:  Peter Jalbert # change following line to your infomation.
+  name: Peter Jalbert  # Be used at blog posts' author.
+  first_name: Peter  # Be used at index page about me section.
+  last_name: Jalbert  # Be used at index page about me section.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
   github_username: jarrekk  # Leave blank if you don't have now
   linkedin_id: jarrekk # Leave blank if you don't have now
@@ -31,8 +31,8 @@ author:  # change following line to your infomation.
   desc: Introduce myself will be here.  # Describe yourself.
 
 # comment
-disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
-  name: jalpc
+#disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
+  #name: jalpc
 
 # analytics
 ## google analytics
