--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,7 +1,7 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
-    detail: Company A
+    detail: McNair Center for Entrepreneurship and Innovation
     i18n: company_a
   desc:
     detail: I worked at Company A ...
@@ -10,12 +10,12 @@
     detail: Apr. 2016
     i18n: company_a_date
   job:
-    detail: CTO
+    detail: Software Development Intern
     i18n: company_a_job
   icon: fa-plus-square
 
 - name:
-    detail: Company B
+    detail: Rice University, RUSH Lab
     i18n: company_b
   desc:
     detail: I worked at Company B ...
@@ -24,6 +24,6 @@
     detail: Jun. 2015
     i18n: company_b_date
   job:
-    detail: Full Stack Developer
+    detail: Undergraduate Researcher
     i18n: company_b_job
   icon: fa-plus-square
