--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:  # change following line to your infomation.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
   github_username: peterjalbert  # Leave blank if you don't have now
   linkedin_id: peter-jalbert-3b2a71113 # Leave blank if you don't have now
-  facebook_username: jalbert.peter@yahoo.com  # Leave blank if you don't have now
+  facebook_username: peter.jalbert.9  # Leave blank if you don't have now
   twitter_username:   # Leave blank if you don't have now
   email: peterjalbert@rice.edu # Leave blank if you don't have now
   cv:  # A online CV can be printed as PDF, leave blank if you don't have now
