--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:  # change following line to your infomation.
   name: Peter Jalbert  # Be used at blog posts' author.
   first_name: Peter  # Be used at index page about me section.
   last_name: Jalbert  # Be used at index page about me section.
-  avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
+  avatar: /static/assets/img/landing/selfie.jpg  # upload your avatar at directory and edit it.
   github_username: peterjalbert  # Leave blank if you don't have now
   linkedin_id: peter-jalbert-3b2a71113 # Leave blank if you don't have now
   facebook_username: peter.jalbert.9  # Leave blank if you don't have now
@@ -22,9 +22,11 @@ author:  # change following line to your infomation.
   email: peterjalbert@rice.edu # Leave blank if you don't have now
   cv:  # A online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
-  #skill_icon1:
+  skill_icon1:
   #  - name: icon-apache
+    - name:
   #  - name: fa-linux
+    - name:
   #skill_icon2:
   #  - name: fa-linux
   #  - name: icon-apache
