--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:  # change following line to your infomation.
   #skill_icon2:
   #  - name: fa-linux
   #  - name: icon-apache
-  desc: Introduce myself will be here.  # Describe yourself.
+  desc: I am an undergraduate student at Rice University, class of 2019, majoring in Computer Science and Music.    # Describe yourself.
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
